files/pod_highcpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stress-ng
  labels:
    app: stress-ng
spec:
  containers:
  - name: stress-ng
    image: alexeiled/stress-ng:latest-ubuntu
    imagePullPolicy: Always
    args:
    - "-c"
    - "4"
